--- a/test1.css
+++ b/test1.css
@@ -81,6 +81,17 @@ section.search{
     width: 100px;
     height: 0;
     border: 10px solid #000;
+    -webkit-animation: 1s plus steps(10) infinite;
+    -moz-animation: 1s plus steps(10) infinite;
+    animation: 1s plus steps(10) infinite
+}
+@-webkit-keyframes plus {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(180deg);
+    }
 }
 .plus.horizontal{
     position: relative;
